# python-project-52

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main_tasksmanager.yml
manager/manager/: settings.py
task_manager/task_manager/: settings.py
